fix padding problems on buttons and container on smaller devices on game page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
     box-sizing: border-box;
 }
 
-
 h1,
 #question {
     font-family: 'Lato', 'sans serif';
@@ -65,6 +64,10 @@ section {
     padding: 7px;
 }
 
+.navbar {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
 
 .navbar-img {
     height: 5vh;
@@ -125,12 +128,14 @@ section {
 
 /* Buttons style fot all pages */
 
+
 #start-button,
 #next-button {
     width: 200px;
     font-weight: 400;
     background-color: #CD000B;
     color: white !important;
+    margin: 1% auto 10% auto;
 }
 
 .button {
@@ -222,7 +227,7 @@ a:hover {
 }
 
 #quiz {
-    height: 650px;
+    height: fit-content;
     position: relative;
 }
 
@@ -239,10 +244,7 @@ a:hover {
 #choice-container {
     padding: 5px 0;
     margin: 0 auto;
-    position: absolute;
-    bottom: 5px;
-    left: 15%;
-}
+ }
 
 
 #progress {
@@ -294,7 +296,7 @@ a:hover {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 20%;
+    padding-top: 10%;
     left: 0;
     top: 0;
     width: 100%;
@@ -377,7 +379,7 @@ input::placeholder {
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     font-size: x-small;
@@ -437,16 +439,17 @@ input::placeholder {
     }
 
     /* navbar*/
-    .navbar {
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
+    
+    .navbar li a,
+    .navbar .navbar-brand {
+        padding-top: 18px;
     }
-
+    
     .navbar .navbar-brand {
         font-size: 0.8em;
     }
 
-    .navbar li a {
+     .navbar li a {
         font-size: xx-small;
         padding: 10px 0px 0px 20px;
         font-weight: 600;
@@ -460,9 +463,7 @@ input::placeholder {
         padding-top: 0;
     }
 
-    #start-button {
-        margin: 3% auto;
-    }
+   
 
     .instruction-container {
         width: 100%;
@@ -483,10 +484,10 @@ input::placeholder {
         font-size: large;
         width: 140px;
     }
-
+/*
     #quiz {
         height: 465px;
-    }
+    }*/
 
     #question {
         font-size: 1.2em;
@@ -500,6 +501,10 @@ input::placeholder {
 
     #choice-container {
         left: 10%;
+    }
+
+    .modal {
+        padding-top: 10%;
     }
 
     .modal-content {
@@ -526,10 +531,6 @@ input::placeholder {
 
 @media screen and (max-width: 365px) {
 
-    .navbar li a,
-    .navbar .navbar-brand {
-        padding-top: 18px;
-    }
 
     #timer {
         font-size: small;
